--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,11 @@ section{
 #mainNav .navbar-nav > li > a:focus:hover {
   color: black;
 }
+.avatar{
+  
+  width: 7%;
+  border-radius: 50%;
+}
 
 /* hero section */
 
@@ -119,10 +124,8 @@ height: 400px;
   
 }
 
-
-
 .port{
-  color:dodgerblue;
+  color:darkgoldenrod;
 }
 .gridsection{
   padding: 20px;
@@ -132,10 +135,13 @@ height: 400px;
 .gridsection a{
   position: absolute;
   left: 25px;
-  bottom: 10%;
+  bottom: 5%;
 }
-.avatar{
-  
-  width: 7%;
-  border-radius: 50%;
+
+/* footer-section */
+
+.foot{
+  padding: 30px;
+  display: flex;
+  justify-content: center;
 }
